<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/simple_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_request" />
    <Button
        android:id="@+id/get_post_param_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_post_params" />
    <Button
        android:id="@+id/json_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/json_request" />
    <Button
        android:id="@+id/gson_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gson_request" />
    <Button
        android:id="@+id/header_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_request" />
    <Button
        android:id="@+id/header_params_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_params_request" />
    <Button
        android:id="@+id/image_load_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_load_request" />
    <Button
        android:id="@+id/https_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/https_request" />
    <Button
        android:id="@+id/listview_request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_request" />
    

</LinearLayout>
