<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParamsRequestActivity" >
    
    <EditText android:id="@+id/param1_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_param"
        android:inputType="number"
        />
    <EditText android:id="@+id/param2_et"
        android:layout_below="@id/param1_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_param"
        android:inputType="number"
        />
    <Button android:id="@+id/request_get_btn"
        android:layout_below="@id/param2_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_get_request"
        />
    <Button android:id="@+id/request_post_btn"
        android:layout_below="@id/param2_et"
        android:layout_toRightOf="@id/request_get_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_post_request"
        />
    <ScrollView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/request_get_btn"
        >
        <TextView android:id="@+id/request_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hello_world"
            />
        
    </ScrollView>

</RelativeLayout>
